--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ section {
 }
 
 #Home img {
-    border: 5px solid purple;
+    border: 5px solid rgb(224, 240, 3);
     border-radius: 40px;
     float: right;
 }
